--- a/config/300-add.yaml
+++ b/config/300-add.yaml
@@ -12,7 +12,7 @@
 # See the License for the specific language governing permissions and
 # limitations under the License.
 
-apiVersion: apiextensions.k8s.io/v1beta1
+apiVersion: apiextensions.k8s.io/v1
 kind: CustomResourceDefinition
 metadata:
   name: adds.maths.tableflip.dev
@@ -21,27 +21,34 @@ metadata:
     knative.dev/crd-install: "true"
 spec:
   group: maths.tableflip.dev
-  version: v1alpha1
+  scope: Namespaced
   names:
     kind: Add
     plural: adds
     singular: add
     categories:
-    - all
-    - math
-  scope: Namespaced
-  subresources:
-    status: {}
-  additionalPrinterColumns:
-  - name: Expression
-    type: string
-    JSONPath: .status.expression
-  - name: Result
-    type: string
-    JSONPath: .status.result
-  - name: Ready
-    type: string
-    JSONPath: ".status.conditions[?(@.type=='Ready')].status"
-  - name: Reason
-    type: string
-    JSONPath: ".status.conditions[?(@.type=='Ready')].reason"
+      - all
+      - math
+  versions:
+  - name: v1alpha1
+    served: true
+    storage: true
+    schema:
+      openAPIV3Schema:
+        type: object
+        x-kubernetes-preserve-unknown-fields: true
+    subresources:
+      status: { }
+    additionalPrinterColumns:
+    - name: Expression
+      type: string
+      jsonPath: .status.expression
+    - name: Result
+      type: string
+      jsonPath: .status.result
+    - name: Ready
+      type: string
+      jsonPath: ".status.conditions[?(@.type=='Ready')].status"
+    - name: Reason
+      type: string
+      jsonPath: ".status.conditions[?(@.type=='Ready')].reason"
