--- a/config/300-subtract.yaml
+++ b/config/300-subtract.yaml
@@ -12,7 +12,7 @@
 # See the License for the specific language governing permissions and
 # limitations under the License.
 
-apiVersion: apiextensions.k8s.io/v1beta1
+apiVersion: apiextensions.k8s.io/v1
 kind: CustomResourceDefinition
 metadata:
   name: subtracts.maths.tableflip.dev
@@ -21,7 +21,6 @@ metadata:
     knative.dev/crd-install: "true"
 spec:
   group: maths.tableflip.dev
-  version: v1alpha1
   names:
     kind: Subtract
     plural: subtracts
@@ -30,18 +29,26 @@ spec:
     - all
     - math
   scope: Namespaced
-  subresources:
-    status: {}
-  additionalPrinterColumns:
-  - name: Expression
-    type: string
-    JSONPath: .status.expression
-  - name: Result
-    type: string
-    JSONPath: .status.result
-  - name: Ready
-    type: string
-    JSONPath: ".status.conditions[?(@.type=='Ready')].status"
-  - name: Reason
-    type: string
-    JSONPath: ".status.conditions[?(@.type=='Ready')].reason"
+  versions:
+  - name: v1alpha1
+    served: true
+    storage: true
+    schema:
+      openAPIV3Schema:
+        type: object
+        x-kubernetes-preserve-unknown-fields: true
+    subresources:
+      status: {}
+    additionalPrinterColumns:
+    - name: Expression
+      type: string
+      jsonPath: .status.expression
+    - name: Result
+      type: string
+      jsonPath: .status.result
+    - name: Ready
+      type: string
+      jsonPath: ".status.conditions[?(@.type=='Ready')].status"
+    - name: Reason
+      type: string
+      jsonPath: ".status.conditions[?(@.type=='Ready')].reason"
